--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -1,23 +1,29 @@
 .banner {
   position: relative;
-  background-image: url(../../images/background.png);
-  background: cover;
-  background-position: center;
-  padding: 200px 0px;
+  background-size: cover;
+  background-position: center center;
+  padding: 150px 0px;
+  opacity: 0.7;
 }
+
 
 .container h1 {
   color: rgb(255,255,255);
   display: block;
+  font-family: 'Sacramento', cursive;
+  font-size: 48px;
+  margin-bottom: 0px;
 }
 
 .container p {
-  color: #afb0af;
+  color: #3C4245;
   display: block;
+  margin-top: 5px;
 }
 
 .container {
   margin: auto;
   width: 900px;
   justify-content: center;
+  text-align: center;
 }
