--- a/css/components/cards.css
+++ b/css/components/cards.css
@@ -1,5 +1,7 @@
 .text-center {
   text-align: center;
+  font-family: 'Sacramento', cursive;
+  font-size: 32px;
 }
 
 .cards {
@@ -12,14 +14,22 @@
 
 .card {
   width: 200px;
-  border-radius: 3px;
-  box-shadow: 0 0 5px rgb(230,230,230);
   text-align: center;
   padding: 20px;
-  border: 1px solid rgb(230,230,230);
   height: 250px;
 }
 
 .card img {
-  height: 100px;
+  height: 120px;
+  width: 100%;
+  object-fit: cover;
+  box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
+
+.card h3 {
+  margin-bottom: 8px;
+}
+
+.content {
+  padding: 80px;
 }
